fix(virtualassistant): CA-126: Bot names should be truncated in delete dialog box

--- a/app/modules/sunlight/features/template/_care-chat.scss
+++ b/app/modules/sunlight/features/template/_care-chat.scss
@@ -36,6 +36,7 @@
     font-size: $h6-font-size;
     font-family: $brand-font-light;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
     @include vr-spacing(mt, 0.75);
   }
 }
